# singapore-government-directory

./: .gitignore  README.md  main.py  query_gender_distribution.py  requirements.txt
.github/workflows/: deploy-docs.yml
dbt/: dbt_project.yml  profiles.yml  pyproject.toml
dbt/analyses/: duplicate_emails.sql  gender_distribution.sql  spot_check_cmio.sql
dbt/models/dimensions/: dim_departments.sql  dim_extraction_sessions.sql  dim_person.sql  schema.yml
dbt/models/dimensions/metadata/: dim_extraction_sessions.sql  dim_metadata.sql
dbt/models/facts/: fact_civil_servants.sql  fact_current_roles.sql  fact_people_changes.sql  fact_role_history.sql  schema.yml
dbt/models/facts/metadata/: fact_extraction_metadata.sql
dbt/models/staging/: properties.yml  stg_metadata.sql  stg_preprocessed_names_mapping.sql  stg_preprocessed_postfixes_history.sql  stg_preprocessed_prefixes_history.sql  stg_raw_departments.sql  stg_raw_names.sql  stg_scd_departments.sql  stg_scd_names.sql
dbt/seeds/: ethnicity_patterns.csv  schema.yml
docs/: .gitignore  generate.py  pyproject.toml
docs/templates/: index.html
extractor/: cli.py  config.py  logger.py  main.py  preflight.py  pyproject.toml  pyrightconfig.json  runner.py
extractor/gbq/: __init__.py
extractor/ministries/: __init__.py  ministry_explorer.py  pipeline.py
extractor/name_cleaning/: name_processor.py  pipeline.py
extractor/slowly_changing_dimensions/: download_sources.py  pipeline.py
extractor/utils/: __init__.py  html_downloader.py  html_parser.py
extractor/validate_arguments/: __init__.py
ministries/: __init__.py  ministry_explorer.py
utils/: __init__.py  html_parser.py  names.py
