[project]
name = "singapore-government-directory-dbt"
version = "0.1.0"
description = "dbt project for Singapore Government Directory"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "dbt-core>=1.9.1",
    "dbt-bigquery>=1.9.1",
    "google-cloud-bigquery>=3.40.1",
]

[tool.sqlfmt]
dialect = "polyglot"
