[project]
name = "docs"
version = "0.1.0"
description = "Static documentation site for Singapore Government Directory analytics"
authors = [{ name = "jeremychia", email = "jeremyjchia@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "google-cloud-bigquery>=3.0.0",
    "jinja2>=3.0.0",
    "pandas>=1.5.3",
]

[tool.uv]
package = false
