[project]
name = "singapore-government-directory-extractor"
version = "0.1.0"
description = "Extracts data from the Singapore Government Directory"
authors = [{ name = "jeremychia", email = "jeremyjchia@gmail.com" }]
readme = "../README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pandas>=1.5.3",
    "pandas-gbq>=0.20.0",
    "requests>=2.31.0",
]

[project.scripts]
extractor = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = []
